Scope the package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-tasklist",
+  "name": "@humanmade/react-tasklist",
   "version": "1.0.0",
   "description": "react-tasklist React component",
   "main": "lib/index.js",
